--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^6.27.0",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
